<resources>
    <string name="app_name">ParkE</string>
    <string name="main_settings_text">Settings</string>
    <string name="search_text_main">Enter the parking details:</string>
    <string name="search_text_address">Address:</string>
    <string name="search_text_day">Day:</string>
    <string name="search_text_area_label">Label:</string>
    <string name="search_text_start_time">Starting time:</string>
    <string name="search_text_end_time">Ending time:</string>
    <string name="search_error_toast_text">Please enter parking address, starting time and ending time.</string>
    <string name="search_address_error_toast_text">Please enter a full address string.</string>
    <string name="mark_parking_type_text">Parking type:</string>
    <string name="mark_parking_day_text">Day:</string>
    <string name="mark_parking_start_time_text">Start time:</string>
    <string name="mark_parking_end_time_text">End time:</string>
    <string name="mark_parking_current_rules_text">Current rules:</string>
    <string name="mark_parking_residents_text">Residents</string>
    <string name="mark_parking_price_text">Price:</string>
    <string name="mark_error_toast_text">Please enter correct times.</string>
    <string name="mark_parking_rule_added_toast_text">Parking rule added.</string>
    <string name="mark_parking_marked_toast_text">Parking marked.</string>
    <string name="mark_parking_add_rules_toast_text">Please add parking rules.</string>
    <string name="mark_parking_enter_price_toast_text">Please enter park lot price.</string>
    <string name="mark_parking_enter_label_toast_text">Please enter area label.</string>
    <string name="mark_parking_label_text">Label:</string>
    <string name="marker_parking_header_text"><u>Parking</u></string>
    <string name="marker_parking_click_to_navigate_text">Click to navigate!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
