<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <GridLayout
        android:id="@+id/parking_gridlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:rowCount="4"
        android:columnCount="3"
        android:layout_gravity="center">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/mark_parking_day_text"
            android:textSize="15sp"
            android:id="@+id/textview_parking_mark_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <Spinner
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:id="@+id/spinner_parking_mark_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        </Spinner>

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/mark_parking_start_time_text"
            android:id="@+id/textview_parking_mark_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_row="1"
            android:layout_column="2"
            android:id="@+id/editext_mark_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:maxLines="1"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/mark_parking_end_time_text"
            android:id="@+id/textview_parking_mark_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_row="2"
            android:layout_column="2"
            android:id="@+id/editext_mark_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:maxLines="1"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/mark_parking_current_rules_text"
            android:id="@+id/textview_parking_mark_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <Spinner
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:id="@+id/spinner_parking_mark_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        </Spinner>

        <ImageButton
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:id="@+id/imagebutton_mark_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/button_add"
            android:layout_gravity="center_vertical"/>

        <RadioGroup
            android:layout_row="3"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parking_mark_residents_checkbox"
            android:layout_gravity="center_vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_parking_residents_text"
                android:id="@+id/radioButton"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:textSize="15sp" />
        </RadioGroup>

    </GridLayout>
</LinearLayout>